# gradent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BACKEND_ENDPOINTS_TO_ADD.py  DISPATCHER_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_BACKEND_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NOTIFICATION_INTEGRATION_STATUS.md  NOTIFICATION_SYSTEM.md  QUICKSTART.md  README.md  README_SCHEDULER.md  deploy-vm.sh  docker-compose.prod.yml  docker-compose.yml  main.py  model_config.json  pyproject.toml  setup.sh  setup_mock_data.py  start.sh  test_exam_api.py  test_executor.py  test_ntfy.py  test_ntfy.sh
_results/: generated_exam.md
agents/: __init__.py
app/: __init__.py  app.py  main.py
context_updater/: __init__.py  brightspace_client.py  ingestion.py
database/: __init__.py  connection.py  mock_data.py  models.py
deployment/: ARCHITECTURE.md  CHEATSHEET.txt  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md  deploy.sh  nginx-ssl.conf  nginx.conf
docs/: EXAM_SCHEDULER_INTEGRATION.md  FRONTEND_BACKEND_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OAUTH_SETUP.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
main_agent/: __init__.py  agent.py  exam_api_tool.py  prompts.py  workflow_tools.py
notifications/: __init__.py  autonomous.py  discord.py  dispatcher.py
scripts/: README.md  add_exam_results_table.py  check_exam_integration.py  migrate_calendar_events.py  migrate_database.py  rebuild_database.py  setup_all.py  setup_mock_data.py  setup_mock_suggestions.py  setup_vector_db.py  test_executor_flow.py
shared/: __init__.py  callbacks.py  config.py  google_calendar.py  utils.py
tests/: README.md  (+23 more)
(+93 files in other folders)
